--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Europe/Amsterdam
 
 title: Cem Çetin # the main title
 
-tagline: Java Developer # it will display as the subtitle
+tagline: Software Engineer # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
